First lines of WebAssembly Implementation